@@ -579,6 +579,7 @@ All (GUI):
 - wxPropertyGrid: improve composite flags handling (Jens Lody).
 - Don't crash laying out wxGridBagSizer with only hidden elements (briceandre).
 - Fix alignment and transparency of bitmaps in wxDataViewCtrl (Eric Jensen).
+- Fix crash when auto-sizing a wxDataViewCtrl column (Spencer T. Parkin).
 - Add wxHtmlTag::GetParamAsString() convenience method.
 
 wxGTK:
